--- a/app/views/stats/index.html.erb
+++ b/app/views/stats/index.html.erb
@@ -112,4 +112,7 @@
 <div id="throbbler_div">
   <%= image_tag "ajax-loader2.gif", :alt => "Loading..." %>
 </div>
+<div id="ajax_error">
+  Unfortunately, something went wrong while retrieving your request.  Please try again, or contact the site administrator if the problem persists.
+</div>
 <div id="chart"></div>
