Allow authenticated users to view stats

--- a/app/views/users/_roles_explanation.html.erb
+++ b/app/views/users/_roles_explanation.html.erb
@@ -18,7 +18,7 @@
     </tr>
     <tr>
       <th>View statistics for sites in their department</th>
-      <td></td>
+      <td>Yes</td>
       <td>Yes</td>
       <td>Yes</td>
       <td>Yes</td>
