Added name filter explanation

--- a/app/views/sites/_fields.html.erb
+++ b/app/views/sites/_fields.html.erb
@@ -18,6 +18,7 @@
 <div class="form_row">
   <div class="form_label">
     <%= f.label :name_filter %>
+    <span class="name_filter_explanation_button_inline">(<a class="dialog_open">?</a>)</span>
   </div>
   <div class="form_field">
     <%= f.text_field :name_filter %>
