--- a/app/views/sites/new.html.erb
+++ b/app/views/sites/new.html.erb
@@ -5,3 +5,12 @@
     <%= link_to "Cancel", sites_path, :class => "button" %>
   </div>
 <% end %>
+<aside id="name_filter_explanation">
+  A string representing the beginning characters shared between all the device hostnames in the site.<br /><br />
+  Examples:
+  <ul>
+    <li>AAS-</li>
+    <li>BCC-</li>
+    <li>ELLIS114-</li>
+  </ul>
+</aside>
