--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -183,6 +183,10 @@ body {
 	padding-top: 50px;
 }
 
+#container {
+	margin-bottom: 25px;
+}
+
 #page_title {
 	border-left: 1px solid #A6D3FD;
 	line-height: 30px;
