--- a/app/assets/stylesheets/stats.css.scss
+++ b/app/assets/stylesheets/stats.css.scss
@@ -1,11 +1,7 @@
 // Place all the styles related to the stats controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-@mixin rounded-corners($radius) {
-  border-radius: $radius;
-  -moz-border-radius: $radius;
-  -webkit-border-radius: $radius;
-}
+@import "rounded_corners";
 
 .stats {
 	#filters {
