--- a/app/assets/stylesheets/api.css.scss
+++ b/app/assets/stylesheets/api.css.scss
@@ -1,19 +1,8 @@
 // Place all the styles related to the api controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-$main_blue: #3399CC;
-$light_blue: #A6D3FD;
-$lightest_blue: #87C7E6;
-$dark_blue: #437D99;
-$darkest_blue: #115F85;
-$page_bg: #0F2835;
-$page_bg2: #001621;
+@import "colors";
 
-$main_gold: #FFC736;
-$light_gold: #FFD568;
-$lightest_gold: #FFE090;
-$dark_gold: #BFA04E;
-$darkest_gold: #A67D12;
 .api {
 	#api_explanation {
 		font-size: 12px;
