--- a/app/views/layouts/popup.html.erb
+++ b/app/views/layouts/popup.html.erb
@@ -6,7 +6,7 @@
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
   <%= stylesheet_link_tag    "popup", "sites" %>
-  <%= javascript_include_tag "jquery", "popup/sites" %>
+  <%= javascript_include_tag "jquery", "popup/popup_sites" %>
   <%= csrf_meta_tags %>
   <%= favicon_link_tag 'favicon.png', :type => 'image/png' %>
 </head>
