Message during long AJAX request

--- a/app/assets/stylesheets/stats.css.scss
+++ b/app/assets/stylesheets/stats.css.scss
@@ -78,7 +78,7 @@
 		text-align: center;
 		padding-top: 30px;
 	}
-	#ajax_error {
+	#ajax_error, #ajax_long {
 		text-align: center;
 		padding: 25px;
 	}
