--- a/app/views/stats/index.html.erb
+++ b/app/views/stats/index.html.erb
@@ -60,6 +60,9 @@
 <div id="throbbler_div">
   <%= image_tag "ajax-loader2.gif", :alt => "Loading..." %>
 </div>
+<div id="ajax_long">
+  For faster results, select a smaller date range.
+</div>
 <div id="ajax_error">
   Unfortunately, something went wrong while retrieving your request.  Please try again, or contact the site administrator if the problem persists. <br /><a id="reload">Try again</a>
 </div>
