--- a/app/assets/stylesheets/logs.css.scss
+++ b/app/assets/stylesheets/logs.css.scss
@@ -3,11 +3,10 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .logs {
 	#search_form {
-		margin-bottom: 30px;
 		width: 90%;
 		padding-bottom: 10px;
 		border-bottom: 1px dotted;
-		#filter_row {
+		.filter_row {
 			margin-bottom: 15px;
 			line-height: 27px;
 			text-align: center;
@@ -20,6 +19,9 @@
 					display: block;
 					text-align: center;
 				}
+				#start_date, #end_date {
+					height: 21px;
+				}
 			}
 		}
 		#button_row {
@@ -30,9 +32,20 @@
 			}
 		}
 	}
-
+	#searching {
+		width: 90%;
+		height: 21px;
+		text-align: center;
+		margin-top: 15px;
+		margin-bottom: 15px;
+		img {
+			display: none;
+		}
+	}
 	.no_logs {
 		font-size: 16px;
+		text-align: center;
+		width: 90%;
 	}
 	#logs_table {
 		width: 90%;
@@ -48,4 +61,14 @@
 			}
 		}
 	}
+	#client, #vm_or_user, #site, #type {
+		width: 200px;
+	}
+	#icons {
+		display: none;
+	}
+}
+.result_icon {
+	margin-right: 5px;
+	margin-bottom: -1px;
 }
