--- a/app/views/clients/_client.html.erb
+++ b/app/views/clients/_client.html.erb
@@ -6,6 +6,6 @@
   <td><%= client.mac_address %></td>
   <td><%= client.ip_address %></td>
   <td><%= time_ago_in_words(client.last_checkin) + " ago" if client.last_checkin %></td>
-  <td><%= link_to "delete", client, :method => :delete, :confirm => "You sure?",
+  <td><%= link_to "delete", client, :method => :delete, :data => { :confirm => "You sure?" },
                                   :title => "Delete #{client.name}" if can? :destroy, client %></td>
 </tr>
