--- a/app/views/sites/_fields.html.erb
+++ b/app/views/sites/_fields.html.erb
@@ -37,7 +37,7 @@
     </div>
   </div>
 </div>
-<% if current_user.administrator? %>
+<% if allow_param? :sites, :department_id %>
 <div class="form_row">
   <div class="form_label">
     <%= f.label :department %>
