--- a/app/views/sites/_site.html.erb
+++ b/app/views/sites/_site.html.erb
@@ -4,7 +4,11 @@
   <td><%= best_in_place site, :name_filter %></td>
   <td><%= best_in_place site, :enabled, :type => :checkbox %></td>
   <td><%= best_in_place site, :site_type, :type => :select, :collection => Site::TYPES.map {|t| [t, t.titleize]} %></td>
+  
+  <% if current_user.administrator? %>
   <td><%= site.department.display_name %></td>
+  <% end %>
+  
   <td><%= @device_counts[site.id] %></td>
   <td><%= link_to "edit", edit_site_path(site) %></td>
   <td><%= link_to "delete", site, :method => :delete, :confirm => "You sure?",
