Changed site name_filter to regex

--- a/app/views/sites/_sites.html.erb
+++ b/app/views/sites/_sites.html.erb
@@ -3,7 +3,7 @@
     <thead>
       <th><%= sortable "sites.display_name", "Display Name" %></th>
       <th><%= sortable "short_name" %></th>
-      <th><%= sortable "name_filter" %></th>
+      <th><%= sortable "name_filter" %> <span class="name_filter_explanation_button_inline">(<a class="dialog_open">?</a>)</span></th>
       <th><%= sortable "enabled" %></th>
       <th><%= sortable 'site_type' %>
         
