--- a/app/views/sites/new.html.erb
+++ b/app/views/sites/new.html.erb
@@ -1,3 +1,9 @@
+<!-- <aside id="client_matches" data-url="<%= match_clients_path %>">
+  <div id="searching">
+    <%= image_tag "searching.gif", :title => "Searching" %>
+  </div>
+  <div id="matches_list"></div>
+</aside> -->
 <%= form_for(@site) do |f| %>
   <%= render 'fields', :f => f %>
   <div class="actions">
