--- a/app/assets/stylesheets/sites.css.scss
+++ b/app/assets/stylesheets/sites.css.scss
@@ -301,3 +301,30 @@
 		padding-left: 20px;
 	}
 }
+#client_matches {
+	font-size: 12px;
+	color: #FFD568;
+	h4 {
+		div {
+			display: inline-block;
+			border-bottom: 1px solid;
+			padding-bottom: 3px;
+			.count {
+				font-size: 14px;
+				color: $light_blue;
+			}
+		}
+		font-weight: normal;
+		padding-bottom: 3px;
+	}
+	.matches_list {
+		display: inline-block;
+		margin-right: 15px;
+		vertical-align: top;
+	}
+	.match_site {
+		color: $light_blue;
+		font-style: italic;
+		font-size: 10px;
+	}
+}
