--- a/app/views/sites/new.html.erb
+++ b/app/views/sites/new.html.erb
@@ -1,9 +1,3 @@
-<!-- <aside id="client_matches" data-url="<%= match_clients_path %>">
-  <div id="searching">
-    <%= image_tag "searching.gif", :title => "Searching" %>
-  </div>
-  <div id="matches_list"></div>
-</aside> -->
 <%= form_for(@site) do |f| %>
   <%= render 'fields', :f => f %>
   <div class="actions">
@@ -11,19 +5,5 @@
     <%= link_to "Cancel", sites_path, :class => "button" %>
   </div>
 <% end %>
-<aside id="name_filter_explanation">
-  A regular expression that matches all the device hostnames in the site.  
-  <br /><br />
-  Omit the opening and closing slashes (/). When used, the name filter will be wrapped like this:
-  <br /><br />
-  /^name_filter$/i
-  <br /><br />
-  Examples:
-  <ul>
-    <li>AAS-\S+</li>
-    <li>BCC-(TC|PC|ZC|MAC)-\d{2}</li>
-    <li>ELLIS(114)?-(TC|ZC|MAC)-\d+</li>
-  </ul>
-  <br />
-  For help with determining the correct regular expression, check out <a href="http://rubular.com" target="_blank">rubular.com</a>.
-</aside>
+
+<%= render 'shared/name_filter_explanation' %>
