--- a/app/views/application/_department_link.html.erb
+++ b/app/views/application/_department_link.html.erb
@@ -1,6 +1,6 @@
 <li <%= "class=active" if department_link_active?(department_link.id) %>>
   <%= link_to department_link.display_name, department_path(department_link) %>
   <% if department_link_active?(department_link.id) %>
-    <ul><%= site_links(department_link.id) %></ul>
+    <%= site_links(department_link.id) %>
   <% end %>
 </li>
