--- a/app/assets/stylesheets/sites.css.scss
+++ b/app/assets/stylesheets/sites.css.scss
@@ -272,12 +272,13 @@
 				cursor: pointer;
 			}
 		}
-	}
-	#main_throbbler {
-		max-width: 1600px;
-		text-align: center;
-		margin-top: 20px;
-		display: none;
+		#main_throbbler {
+			display: inline-block;
+			img {
+				display: none;
+				padding-left: 15px;
+			}
+		}
 	}
 	#type_icon_reserve {
 		display: none;
