Refactored for Turbolinks

--- a/app/views/api/api.html.erb
+++ b/app/views/api/api.html.erb
@@ -9,8 +9,8 @@
   Retrieve a complete site block in the form of a popup window:
   <textarea rows="4">
 <a href="http://sitesusage.doit.missouri.edu/sites/popup/<abbreviated_site_name>" onClick="window.open(this.href, 'Window Title', 'height=300, width=300, location=no, toolbar=no, directories=no, status=no, resizable=no, scrollbars=no'); return false;">Link Text</a></textarea>
-  Example: <a href="http://sitesusage.doit.missouri.edu/sites/popup/aas10" 
-              onClick="window.open(this.href, 'Arts and Science 10', 'height=300, width=300,location=no,toolbar=no,directories=no,status=no,resizable=no,scrollbars=no'); return false;">Arts & Science 10</a>
+  Example: <a href="http://sitesusage.doit.missouri.edu/sites/popup/pershing" 
+              onClick="window.open(this.href, 'Pershing Hall', 'height=300, width=300,location=no,toolbar=no,directories=no,status=no,resizable=no,scrollbars=no'); return false;">Pershing Hall</a>
 </div>
 <section id="api_reference">
   <h2>Site Abbreviations</h2>
