--- a/app/views/clients/_clients.html.erb
+++ b/app/views/clients/_clients.html.erb
@@ -4,7 +4,7 @@
       <th><%= sortable "name" %></th>
       <th><%= sortable "client_type", "Type" %></th>
       <th><%= sortable "sites.display_name", "Site" %></th>
-      <th><%= sortable "enabled" %></th>
+      <th><%= sortable "clients.enabled", "Enabled" %></th>
       <th><%= sortable "mac_address", "MAC Address" %></th>
       <th><%= sortable "ip_address", "IP Address" %></th>
       <th><%= sortable "last_checkin", "Last Check-in" %></th>
